// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`EnvironmentMode should render as development mode 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md"
      data-accent-color="neutral"
    >
      Development
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as preview mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-accent1-subtle border rounded-md text-accent1"
      data-accent-color="purple"
    >
      Ephemeral
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as production mode 1`] = `
<body>
  <div>
    <span
      class="inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-negative-subtle border rounded-md text-negative"
      data-accent-color="red"
    >
      Production
    </span>
  </div>
</body>
`;

exports[`EnvironmentMode should render as staging mode 1`] = `
<body>
  <div>
    <span
      class="text-neutral inline-flex items-center shrink-0 text-xs px-1.5 h-6 border-neutral border rounded-md"
      data-accent-color="neutral"
    >
      Staging
    </span>
  </div>
</body>
`;
